--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ledger Web - open platform for web apps using ledger devices"
+      content="Ledger Web - open community platform for web3/defi apps using ledger devices on the web"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
